syntax = "proto3";
package com.greetings.grpc;

message Player {
  string id = 1;
  string address = 2;
  int32 portNumber = 3;

  message Coordinates {
    int32 x = 1;
    int32 y = 2;
  }

  Coordinates coordinates = 4;
}

message HelloRequest {
  Player player = 1;
}

message HelloReply {
  string message = 1;
}

service GreetingService {
  rpc SayHello (HelloRequest) returns (HelloReply);
}